# web-scraping-

./: README.md  imdb_top_250_movies.csv  main.py  pyproject.toml
